<resources>
    <string name="app_name">Marvel Compose</string>
    <string name="arrow_back">Previous page</string>
    <string name="more_action">More Actions</string>
    <string name="share_comic">Share comic</string>
    <string name="characters">Charaters</string>
    <string name="menu">Menu</string>
    <string name="favorite">Favorite</string>
    <string name="comic">Comics</string>
    <string name="stories">Stories</string>
    <string name="events">Events</string>
    <string name="series">Series</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="go_to_detail">Go to detail</string>
</resources>